--- a/_includes/bin_table.html
+++ b/_includes/bin_table.html
@@ -21,7 +21,7 @@
         <tbody>
             {% for file in site.binaries %}
             <tr>
-                <td><a href="{{ file.url }}" class="bin-name">{% include get_bin_name path=file.path %}</a></td>
+                <td><a href="{{ file.url | relative_url }}" class="bin-name">{% include get_bin_name path=file.path %}</a></td>
                 <td>{% include function_list.html bin=file %}</td>
             </tr>
             {% endfor %}
