--- a/_includes/page_title.html
+++ b/_includes/page_title.html
@@ -1,6 +1,6 @@
 <h1>
     {% if page.url != '/' %}
-    <a href="/">..</a> /
+    <a href="{{ site.baseurl }}/">..</a> /
     {% endif %}
     {{ include.title }}
 </h1>
