--- a/_layouts/common.html
+++ b/_layouts/common.html
@@ -13,8 +13,8 @@
             {% endif %}
             {{ site.title }}
         </title>
-        <link rel="icon" href="/assets/logo.png">
-        <link rel="stylesheet" href="/assets/style.css" type="text/css"/>
+        <link rel="icon" href="{{ site.baseurl }}/assets/logo.png">
+        <link rel="stylesheet" href="{{ site.baseurl }}/assets/style.css" type="text/css"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes">
     </head>
     <body>
